test/data/fail/literals/template.js
`\1`;
//<>
`\8`;
//<>
`\01`;
//<>
`\377`;
//<>
`\u{110000}`;
